--- a/index.html
+++ b/index.html
@@ -11,28 +11,66 @@
 
 <body>
   <header>
-    <h1>Clínica MedSalud</h1>
-    <div>Iniciar Sesión</div>
-    <div>Regístrate</div>
+    <h1 class="title">Clínica MedSalud</h1>
+    <nav class="nav1">
+      <ul class="nav">
+        <li><a href=""><i class="fa-solid fa-user "></i></a>
+          <ul>
+            <li><a href="">Iniciar Sesion</a></li>
+            <li><a href="">Registrarse</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <hr>
+    <nav class="flex-container">
+      <ul>
+        <li><a href="./index.html">Inicio</a></li>
+        <li><a href="./views/clinica.html">La Clínica</a></li>
+        <li><a href="./views/servicios.html">Servicios</a></li>
+        <li><a href="./views/situacionesDeEmergencia.html">Situaciones de Emergencia</a></li>
+        <li><a href="./views/testDiagnostico.html">Test Diagnóstico</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
-    <section class="flex-container">
-      <div href="./views/citasMedicas.html">Citas Médicas</div>
-      <div href="./views/donacionSangre.html">Donación de Sangre</div>
-      <div href="./views/historialMedico.html">Historial Médico</div>
-      <div href="./views/situacionesEmergencia.html">Situaciones de Emergencia</div>
-      <div href="./views/testDiagnostico.html">Test Diagnóstico</div>
-    </section>
+    <div class="divTitle2">
+      <h2 class="title2">Clínica MedSalud</h1>
+        <h2 class="subTitle2">Proveedores de atención integral</h2>
+    </div>
+    <div class="slider">
+      <ul>
+        <li><img src="./assets/img/ambulance-1005433_1920.jpg" alt="ambulancia"></li>
+        <li><img src="./assets/img/chinese-medicine-3666183_1920.jpg" alt="Toma de pulso"></li>
+        <li><img src="./assets/img/hospital-3089884_1920.jpg" alt="Equipo medioo"></li>
+        <li><img src="./assets/img/medical-equipment-4099430_1920.jpg" alt="Doctor tomando la presion"></li>
+      </ul>
+    </div>
+    <div class="horaApertura">
+      <img class="imagenEspera" src="./assets/img/espera.jpg" alt="Sala de espera">
+      <h2>Horarios de apertura</h2>
+      <span>Estamos para lo que necesite</span>
+      <span>De lunes a viernes de 8:00 a.m a 6:00 p.m</span>
+      <span>Sábados y domingos de 8:30 a.m a 1:00 p.m</span>
+    </div>
   </main>
   <footer>
-    <div>Redes Sociales</div>
-    <div>
-      <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.7851405366014!2d-74.08305474901638!3d4.632384043517901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f99a0f9bb0ce7%3A0x5d71ff487837183c!2sUniempresarial!5e0!3m2!1ses!2sco!4v1664183542779!5m2!1ses!2sco"
+      class="maps" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="footer">
+      <h2>Redes Sociales</h2>
+      <div class="footerIcons">
+        <span class="footerSubIcons"><i class="fa-brands fa-facebook"></i></span>
+        <span class="footerSubIcons"><i class="fa-brands fa-twitter"></i></span>
+        <span class="footerSubIcons"><i class="fa-brands fa-instagram"></i></span>
+      </div>
     </div>
   </footer>
-  <script src="https://kit.fontawesome.com/9fd1a302e2.js" crossorigin="anonymous"></script>
 </body>
+
+<script src="https://kit.fontawesome.com/9fd1a302e2.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/c7e1a938a5.js" crossorigin="anonymous"></script>
 
 </html>
